syntax="proto3";

package services;

option go_package = "./services";

import "google/protobuf/timestamp.proto";

message ProdModel {
    int32 prod_id=1;
    string prod_name=2;
    float prod_price=3;
}

message OrderMain{
    int32 order_id=1;
    string order_no=2;
    int32 user_id=3;
    float order_money=4;
    google.protobuf.Timestamp order_time=5;
    repeated OrderDetail order_detail=6;
}

message OrderDetail{
    int32 detail_id=1;
    string order_no=2;
    int32 prod_id=3;
    float prod_price=4;
    int32 prod_num=5;
}

message UserInfo{
    int32 user_id=1;
    int32 user_score=2;
}