syntax="proto3";

package services;

option go_package = "./services";
import "google/api/annotations.proto";
import "models.proto";

enum ProdAreas{
    A=0;
    B=1;
    C=2;
}
message ProdRequest {
    int32 prod_id=1;
    ProdAreas prod_area=2;
}

message ProdResponse {
    int32 prod_stock=1;
}

message QuerySize {
    int32 size=1;
}

message ProdResponseList {
    repeated ProdResponse prores=1;
}

service ProdService {
    rpc GetProdStock (ProdRequest) returns (ProdResponse){
        option (google.api.http) = {
            get: "/v1/prod/{prod_id}"
        };
    }

    rpc GetProdStocks(QuerySize) returns (ProdResponseList) {

    }

    rpc GetProdInfo(ProdRequest) returns (ProdModel){}
}